--- a/src/assets/styles/css/index.css
+++ b/src/assets/styles/css/index.css
@@ -112,9 +112,9 @@ footer {
 }
 .statistics__statBox--gauche {
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
-  font-size: 3vw;
+  font-size: 100%;
   font-weight: bold;
-  padding-bottom: 4vw;
+  padding-bottom: 4vh;
   border: solid;
   border-width: 1px;
   color: #f7f7f7;
@@ -126,9 +126,9 @@ footer {
 }
 .statistics__statBox--droite {
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
-  font-size: 3vw;
+  font-size: 100%;
   font-weight: bold;
-  padding-bottom: 4vw;
+  padding-bottom: 4vh;
   border: solid;
   border-width: 1px;
   color: #f7f7f7;
@@ -140,9 +140,9 @@ footer {
 }
 .statistics__statBox--nombreDeVote {
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
-  font-size: 3vw;
+  font-size: 100%;
   font-weight: bold;
-  padding-bottom: 4vw;
+  padding-bottom: 4vh;
   border: solid;
   border-width: 1px;
   color: #f7f7f7;
@@ -167,9 +167,9 @@ footer {
   height: 25vh;
   width: 15vw;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
-  font-size: 3vw;
+  font-size: 100%;
   font-weight: bold;
-  padding-bottom: 4vw;
+  padding-bottom: 4vh;
   border: solid;
   border-width: 1px;
   background-color: #ffec3a;
@@ -201,16 +201,16 @@ footer {
 }
 .console__containerTop__button {
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
-  font-size: 3vw;
+  font-size: 100%;
   font-weight: bold;
-  padding-bottom: 4vw;
+  padding-bottom: 4vh;
   border: solid;
   border-width: 1px;
   color: #f7f7f7;
   text-shadow: -1px 0 black, 0 2px black, 2px 0 black, 0 -1px black;
   box-shadow: 0px 8px 0px 0px rgba(0, 0, 0, 0.1);
   margin: 10px;
-  padding: 2vh 8vw;
+  padding: 3vh 8vw;
   background-color: #ffec3a;
 }
 .console__containerTop__button:hover {
@@ -226,16 +226,16 @@ footer {
 }
 .console__containerBottom__button {
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
-  font-size: 3vw;
+  font-size: 100%;
   font-weight: bold;
-  padding-bottom: 4vw;
+  padding-bottom: 4vh;
   border: solid;
   border-width: 1px;
   color: #f7f7f7;
   text-shadow: -1px 0 black, 0 2px black, 2px 0 black, 0 -1px black;
   box-shadow: 0px 8px 0px 0px rgba(0, 0, 0, 0.1);
   margin: 10px;
-  padding: 2vh 8vw;
+  padding: 3vh 8vw;
 }
 .console__containerBottom__button--left {
   background-color: #ff5649;
@@ -274,4 +274,53 @@ footer {
 #a-tittle:hover {
   color: black;
   text-decoration: none;
+}
+
+#bilan {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 10% 0 10% 0;
+  grid-column: 5/9;
+  text-align: center;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
+  font-size: 100%;
+  font-weight: bold;
+  padding-bottom: 4vh;
+  border: solid;
+  border-width: 1px;
+  color: #f7f7f7;
+  text-shadow: -1px 0 black, 0 2px black, 2px 0 black, 0 -1px black;
+  box-shadow: 0px 8px 0px 0px rgba(0, 0, 0, 0.1);
+  margin: 10px;
+  background-color: #ffea21;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
+  font-size: 100%;
+  font-weight: bold;
+  padding-bottom: 4vh;
+  padding: 2vh 20vw;
+}
+#bilan:hover {
+  background-color: #edd600;
+}
+#bilan:active {
+  box-shadow: inset -2px -2px 3px rgba(255, 255, 255, 0.6), inset 2px 2px 3px rgba(0, 0, 0, 0.6);
+}
+#bilan > h1 {
+  align-items: center;
+}
+
+#nameBilan {
+  justify-content: space-evenly;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
+  font-size: 100%;
+  font-weight: bold;
+  padding-bottom: 4vh;
+  margin: 10% 0 10% 0;
+  grid-column: 5/9;
+  text-align: center;
+  font-size: 5vw;
+  color: #ffea21;
+  text-shadow: -1px 0 black, 0 2px black, 2px 0 black, 0 -1px black;
+  margin: 10px;
 }/*# sourceMappingURL=index.css.map */
